--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "vlucas/phpdotenv": "^5.4",
       "ext-json": "*",
         "pusher/pusher-push-notifications": "^1.1",
-        "pusher/pusher-php-server": "^7.0"
+        "pusher/pusher-php-server": "^7.0",
+        "predis/predis": "^1.1"
     }
 }
