--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
       "ext-json": "*",
         "pusher/pusher-push-notifications": "^1.1",
         "pusher/pusher-php-server": "^7.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "cloudinary/cloudinary_php": "^2.7"
     }
 }
